syntax = "proto3";

package gps;

service GpsService {
  rpc SendGpsData (GpsData) returns (GpsResponse) {}
}

message GpsData {
  string device_id = 1;
  double latitude = 2;
  double longitude = 3;
  int64 timestamp = 5;
}

message GpsResponse {
  string message = 1;
}